# audiofile_helper

./: CMakeLists.txt  README.md
src/: AudioFile.h  AudioPlayer.h  CMakeLists.txt  af_helpers.h  main.cpp
